# one-shell-history

./: .gitignore  .isort.cfg  .list-files  .list-symbols  Pipfile  README.md  flake.nix  install  notes  notes.todo  pyproject.toml  requirements.in  requirements.txt  test  todo  zup
dev/: osh  osh-fzf
python/: draft.py
python/osh/: __init__.py  __main__.py  aggregation.py  archived_histories.py  cli.py  defaults.py  event_filters.py  fzf.py  histories.py  history.py  import.py  jsonp.py  logging.py  osh_file.py  osh_files.py  profile.py  queries.py  rpc.py  server.py  service.py  sinks.py  socket.py  sources.py  sql_history.py  utils.py  zsh.py  zsh_files.py
python/osh/cli/: direct.py  service.py
python/osh/sync/: git.py
share/osh/: activate.zsh
shells/: zsh
src/: draft.py  osh.py
src/osh/: __init__.py  __main__.py  event_filters.py  fzf.py  history.py  logging.py  profile.py  utils.py
systemd/: ExecStart  ExecStop  install  one-shell-history@.service  osh.service
zsh/: setup.zsh
