[project]
name = "osh"
version = "0.1.0"
description = "one shell history"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "msgspec",
   "typer",
]

[project.scripts]
osh = "osh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osh.py"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
